--- a/templates/server.j2
+++ b/templates/server.j2
@@ -1,4 +1,4 @@
-### Ansible Managed - {{lookup('pipe','date +%m/%d/%Y_%I:%M:%S_%p')}} - Do Not Edit!
+### Ansible Managed - {{lookup('pipe','date +%m/%d/%Y_%I:%M:%S_%p')}}
 
 ###############################################################
 # General Settings
@@ -61,7 +61,7 @@ open_files_limit                	= 65535
 table_definition_cache          	= 4096
 back_log                        	= 200
 table_open_cache                	= 4096
-thread_pool_size                	= 36
+thread_pool_size                	= {{ ansible_processor_vcpus }}
 max_connections                 	= 500
 wait_timeout                    	= 600
 interactive_timeout             	= 600
@@ -92,48 +92,57 @@ long_query_time                 	= 5
 # InnoDB Variables
 ################################################################
 innodb_file_per_table           	= 1
-innodb_buffer_pool_size         	= {{ (ansible_memtotal_mb*0.66)|round|int }}M
+innodb_file_format              	= Barracuda
+innodb_file_format_max          	= Barracuda
+innodb_buffer_pool_size         	= {{ (ansible_memtotal_mb/1024 * 0.66)|round|int }}G
+innodb_buffer_pool_instances    	= {{ (ansible_memtotal_mb/1024 * 0.66)|round|int }}
+innodb_page_cleaners           		= {{ [(ansible_memtotal_mb/1024 * 0.66),64]|min|round|int }}
 innodb_flush_log_at_trx_commit  	= 0
 innodb_flush_method             	= O_DIRECT
-innodb_log_files_in_group       	= 2
+innodb_log_files_in_group       	= {{ (((ansible_memtotal_mb/1024 * 0.66)/2)+1)|round|int }}
 innodb_log_buffer_size          	= 32M
 innodb_log_file_size            	= 1G
 innodb_autoinc_lock_mode        	= 2
 innodb_rollback_on_timeout      	= ON
 innodb_stats_on_metadata        	= 0
 innodb_thread_concurrency       	= {{ (ansible_processor_vcpus * 2) }}
-#innodb_force_primary_key       	= 1
+innodb_force_primary_key        	= 0
 
 ################################################################
 # MariaDB Optimizer Switches
 ################################################################
 optimizer_search_depth          	= 0
-optimizer_switch                	= 'index_merge=on'
-optimizer_switch                	= 'index_merge_union=on'
-optimizer_switch                	= 'index_merge_sort_union=on'
-optimizer_switch                	= 'index_merge_intersection=on'
-optimizer_switch                	= 'index_merge_sort_intersection=off'
-optimizer_switch                	= 'index_condition_pushdown=on'
-optimizer_switch                	= 'derived_merge=on'
-optimizer_switch                	= 'derived_with_keys=on'
-optimizer_switch                	= 'firstmatch=on'
-optimizer_switch                	= 'loosescan=on'
-optimizer_switch                	= 'materialization=on'
-optimizer_switch                	= 'in_to_exists=on'
-optimizer_switch                	= 'semijoin=on'
-optimizer_switch                	= 'partial_match_rowid_merge=on'
-optimizer_switch                	= 'partial_match_table_scan=on'
-optimizer_switch                	= 'subquery_cache=on,mrr=on'
-optimizer_switch                	= 'mrr_cost_based=on'
-optimizer_switch                	= 'mrr_sort_keys=off'
-optimizer_switch                	= 'outer_join_with_cache=on'
-optimizer_switch                	= 'semijoin_with_cache=on'
-optimizer_switch                	= 'join_cache_incremental=on'
-optimizer_switch                	= 'join_cache_hashed=on'
-optimizer_switch                	= 'join_cache_bka=on'
-optimizer_switch                	= 'optimize_join_buffer_size=on'
-optimizer_switch                	= 'table_elimination=on'
-optimizer_switch                	= 'extended_keys=on'
+optimizer_switch                	= index_merge=on
+optimizer_switch                	= index_merge_union=on
+optimizer_switch                	= index_merge_sort_union=on
+optimizer_switch                	= index_merge_intersection=on
+optimizer_switch                	= index_merge_sort_intersection=off
+optimizer_switch                	= engine_condition_pushdown=off
+optimizer_switch                	= index_condition_pushdown=on
+optimizer_switch                	= derived_merge=on
+optimizer_switch                	= derived_with_keys=on
+optimizer_switch                	= firstmatch=on
+optimizer_switch                	= loosescan=on
+optimizer_switch                	= materialization=on
+optimizer_switch                	= in_to_exists=on
+optimizer_switch                	= semijoin=on
+optimizer_switch                	= partial_match_rowid_merge=on
+optimizer_switch                	= partial_match_table_scan=on
+optimizer_switch                	= subquery_cache=on
+optimizer_switch                	= mrr=off
+optimizer_switch                	= mrr_cost_based=off
+optimizer_switch                	= mrr_sort_keys=off
+optimizer_switch                	= outer_join_with_cache=on
+optimizer_switch                	= semijoin_with_cache=on
+optimizer_switch                	= join_cache_incremental=on
+optimizer_switch                	= join_cache_hashed=on
+optimizer_switch                	= join_cache_bka=on
+optimizer_switch                	= optimize_join_buffer_size=off
+optimizer_switch                	= table_elimination=on
+optimizer_switch                	= extended_keys=on
+optimizer_switch                	= exists_to_in=on
+optimizer_switch                	= orderby_uses_equalities=on
+optimizer_switch                	= condition_pushdown_for_derived=on
 
 ################################################################
 # MariaDB Audit
@@ -147,16 +156,16 @@ server_audit_events	            	= query_ddl
 ################################################################
 # Standard Replication Settings
 ################################################################
-sysdate_is_now                  	= 1
-report_host                     	= {{ ansible_nodename }}
 log_slave_updates               	= 1
+read_only                       	= ON
 relay_log                       	= /var/log/mysql/mariadb-relay
 relay_log_index                 	= /var/log/mysql/mariadb-relay.index
 relay-log-info-file             	= /var/log/mysql/mariadb-relay.info
-read_only                       	= ON
+report_host                     	= {{ ansible_nodename }}
 slave_parallel_mode             	= conservative
 slave_domain_parallel_threads   	= 2
 slave_parallel_threads          	= 2
+sysdate_is_now                  	= 1
 
 #################################################################
 ## Galera Settings
@@ -166,7 +175,7 @@ slave_parallel_threads          	= 2
 #wsrep_provider                  	= /usr/lib64/galera/libgalera_smm.so
 #wsrep_provider_options          	= "gcs.fc_limit=32;gcache.size=2G;gcache.recover=yes"
 #wsrep_slave_threads             	= {{ ansible_processor_vcpus }}
-#wsrep_cluster_name              	= change_me
+#wsrep_cluster_name              	= galera_cluster
 #wsrep_node_name                 	= {{ ansible_nodename }}
 #wsrep_node_address              	= {{ ansible_enp0s8['ipv4']['address'] }}
 #wsrep_forced_binlog_format      	= ROW
