--- a/templates/server.j2
+++ b/templates/server.j2
@@ -28,7 +28,7 @@ character_set_server            	= utf8
 collation_server                	= utf8_general_ci
 init_connect                    	= 'SET NAMES utf8'
 user                            	= mysql
-ignore-db-dir                   	= .rocksdb, lost+found
+ignore-db-dir                   	= lost+found
 default_storage_engine          	= InnoDB
 #enforce_storage_engine          	= InnoDB
 userstat                        	= ON
