--- a/templates/general.j2
+++ b/templates/general.j2
@@ -21,14 +21,14 @@ socket                          	= /var/lib/mysql/mysql.sock
 port                            	= 3306
 pid-file                        	= /var/lib/mysql/mysql.pid
 server_id                       	= {{ vars['ansible_' + ethernet_interface]['ipv4']['address']|regex_replace("\.", "" )}}
-gtid_domain_id                  	= {{ vars['ansible_' + ethernet_interface]['ipv4']['address']|regex_replace("\.", "" )}}
+gtid_domain_id                  	= 1
 character_set_server            	= utf8
 collation_server                	= utf8_general_ci
 init_connect                    	= 'SET NAMES utf8'
 user                            	= mysql
 ignore_db_dirs                  	= lost+found
 default_storage_engine          	= InnoDB
-#enforce_storage_engine          	= InnoDB
+enforce_storage_engine          	= InnoDB
 userstat                        	= ON
 feedback                        	= ON
 performance_schema
