--- a/templates/general.j2
+++ b/templates/general.j2
@@ -91,7 +91,7 @@ innodb_flush_method             	= O_DSYNC
 innodb_log_files_in_group       	= 2
 innodb_log_buffer_size          	= 64M
 innodb_log_file_size            	= {{ [[(((ansible_memtotal_mb/1024 * 0.125)/2)),1]|max,15]|min|round|int }}G
-innodb_io_capacity              	= 1000 # See Note 1
+innodb_io_capacity              	= 1000 ### See Note 1 ###
 innodb_autoinc_lock_mode        	= 2
 innodb_rollback_on_timeout      	= ON
 innodb_thread_concurrency       	= {{ (ansible_processor_vcpus * 2) }}
@@ -172,6 +172,6 @@ server_audit_events	            	= query_ddl
 # Notes
 ################################################################
 
-# 1. Benchmark your iops before adjusting (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/benchmark_procedures.html)
+### 1. Benchmark your iops before adjusting (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/benchmark_procedures.html)
 {% raw %}
 {% endraw %}
