--- a/templates/sst.j2
+++ b/templates/sst.j2
@@ -1,6 +1,6 @@
 [sst]
 streamfmt                       	= xbstream
 transferfmt                     	= socat
-compressor                      	= pigz
+compressor                      	= "pigz -c"
 decompressor                    	= "pigz -dc"
 inno-apply-opts                 	= "--use-memory=1G"
